--- a/ru.html
+++ b/ru.html
@@ -20,13 +20,14 @@
             </div>
             <div class="containerContact">
                 <div class="contact-info">
-                   <a href="./index.html" class="language-button">UK</a>
+                 
                     <p><i class="material-icons">location_on</i> г. Харьков, ул. Мироносицкая 10</p>
                     <p><i class="material-icons">phone</i> +38 (099) 990-81-00 (viber, telegram)</p>
                 </div>
                 <div class="social-icons">
                     <a href="#"><img src="./img/icon/facebook (2).png" alt="Facebook" class="responsive-img"></a>
                     <a href="#"><img src="./img/icon/social.png" alt="Instagram" class="responsive-img"></a>
+                    <p> <a href="./index.html" class="language-button">UK</a></p>
                 </div>
             </div>
         </div>
